--- a/qtify/src/components/Hero/Hero.module.css
+++ b/qtify/src/components/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-  background-color: var(--color-black);
+  background-color: var(--black);
   height: 270px;
   display: flex;
   justify-content: center;
