--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,16 @@
 .navbar {
-  background-color: var(--color-primary);
+  background-color: var(--primary-green);
   height: 74px;
-  width: 100vw;
-  padding: 0px 32px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 32px; 
+  box-sizing: border-box;
+  gap: 32px;
+
+}
+.navbarLeft {
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
