--- a/qtify/src/components/Search/Search.module.css
+++ b/qtify/src/components/Search/Search.module.css
@@ -1,27 +1,34 @@
 .search {
-  padding: 14px 20px;
+  padding: 7px ;
   height: 100%;
   border-radius: 8px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   border: 1px solid var(--color-black);
   width: 502px;
+  align-items: center;
+  justify-content: center;
 }
 
 .wrapper {
   display: flex;
   align-items: stretch;
   height: 48px;
+  height: 48px;
 }
 
 .searchButton {
-  border-radius: 0px 8px 8px 0px;
-  padding: 14px 20px;
+  width: 48px; 
   height: 100%;
   border: 1px solid var(--color-black);
   border-left: none;
+  border-radius: 0 8px 8px 0;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-  height: 100%;
+  box-sizing: border-box;
 }
 
 .listElement {
