--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -4,13 +4,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 32px; 
-  box-sizing: border-box;
+  padding: 0 2rem; 
   gap: 32px;
 
 }
 .navbarLeft {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 2rem;
+}
+
+.navbarRight {
+  display: flex;
+  align-items: center;
 }
