--- a/qtify/src/components/Hero/Hero.module.css
+++ b/qtify/src/components/Hero/Hero.module.css
@@ -10,7 +10,12 @@
   padding: 0 4rem;
 }
 
-
+.heroContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
 
 .heroImage {
   width: 212px;
